--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,20 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# IDE
+.idea/
+
+# Python
+config.py
+*.pyc
+*.pyo
+venv/
+.env
+
+# OS
+.DS_Store
+Thumbs.db
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
